<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?, </string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_createaccount">ÚNETE</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="username_card">Uriel Ramírez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumber_card">10 Me Gusta</string>
</resources>
